--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -1,17 +1,30 @@
 body {
-    background-color: #6A0F1A;
+    background-color: #F5EFE5;
     text-align: center;
 }
+
 
 
 .listWorks {
     display: flex;
-    flex-direction:column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 15px;
+    justify-content: center;   
+    padding: 20px;
 }
+
+.listWorks ul {
+    list-style: none;          
+    padding: 0;
+    margin: 0;
+    max-width: 600px;          
+    width: 100%;
+}
+
+.listWorks li {
+    text-align: center;
+    padding: 10px;
+    font-size: 1.1rem;
+}
+
 
 .cardPhotos {
     display: grid;
@@ -25,10 +38,25 @@ body {
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-    background-color: #fff;
-    font-family: Arial, sans-serif;
-    transition: transform 0.3s ease;
+    background-color: #f1f0ef;
+    position: relative;   
 }
+
+
+.listWorks ul {
+    list-style: none;          
+    padding: 0;
+    margin: 0;
+    max-width: 600px;          
+    width: 100%;
+}
+
+.listWorks li {
+    text-align: center;
+    padding: 10px;
+    font-size: 1.1rem;
+}
+
 
 .card:hover {
     transform: translateY(-5px);
@@ -48,10 +76,16 @@ body {
 
 .cardContent {
     position: absolute;
-    color: #fff;
+    bottom: 0;                  
+    left: 50%;                   
+    transform: translateX(-50%);
+    width: 100%;
+    color: #B6B5B2;
     padding: 15px;
     text-align: center;
+    background: #3F4826; 
 }
+
 
 .cardContent h3 {
     margin-bottom: 10px;
