--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -2,15 +2,18 @@ body {
 font-family: Arial, Helvetica, sans-serif;
     background-color: #F5EFE5;
     background-image: url("/images/logoAgency.png");
-    background-size: 50%;
+    background-size: 30%;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
 }
-h1{
-    text-align: center;
+.titleBig{
     color: #6A0F1A;
-    
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 5vw; 
+    text-align: center; 
+    width: 100%; 
+    padding: 20px;
 }
 
 .listWorks {
@@ -70,11 +73,6 @@ h1{
     height: 100%;
     object-fit: cover;
     position: relative;
-}
-
-.imgjavier {
-    width: 100px;
-    height: 50px;
 }
 
 .cardContent {
