--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -81,10 +81,12 @@ font-family: Arial, Helvetica, sans-serif;
     left: 50%;
     transform: translateX(-50%);
     width: 100%;
+    height: 110px;
     color: #B6B5B2;
     padding: 15px;
     text-align: center;
     background: #3F4826;
+    overflow: hidden;
 }
 
 
