--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -1,3 +1,8 @@
+*{
+    box-sizing: border-box;
+}
+
+
 body {
 font-family: Arial, Helvetica, sans-serif;
     background-color: #F5EFE5;
@@ -6,7 +11,11 @@ font-family: Arial, Helvetica, sans-serif;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
+    margin: 0%;
+    padding: 0%;
 }
+
+
 .titleBig{
     color: #6A0F1A;
     font-family: Arial, Helvetica, sans-serif;
@@ -35,7 +44,12 @@ font-family: Arial, Helvetica, sans-serif;
     padding: 10px;
     font-size: 1.1rem;
 }
-
+.cardwork{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+    padding: 20px;
+} 
 
 .cardPhotos {
     display: grid;
@@ -108,11 +122,9 @@ font-family: Arial, Helvetica, sans-serif;
     max-width: 500px; 
     border-radius: 10px; 
     box-shadow: 0 4px 8px #B6B5B2; 
-
-
     color: #B6B5B2; 
     line-height: 1.5;
-} 
+}
 .textT{
     background-color: #3F4826; 
     border: 2px solid #6A0F1A; 
