--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -63,7 +63,7 @@ font-family: Arial, Helvetica, sans-serif;
     border-radius: 15px;
     overflow: hidden;
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
-    background-color: #f1f0ef;
+    background-color: #6A0F1A;
     position: relative;
 }
 
