--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -122,11 +122,12 @@ font-family: Arial, Helvetica, sans-serif;
     padding: 20px; 
     margin: 50px auto; 
     width: 60%; 
-    max-width: 500px; 
+    max-width: 1000px; 
     border-radius: 10px; 
     box-shadow: 0 4px 8px #B6B5B2; 
     color: #B6B5B2; 
     line-height: 1.5;
+    font-size: 130%;
 }
 .textT{
     background-color: #3F4826; 
@@ -134,9 +135,10 @@ font-family: Arial, Helvetica, sans-serif;
     padding: 20px; 
     margin: 50px auto; 
     width: 60%; 
-    max-width: 500px; 
+    max-width: 1000px; 
     border-radius: 10px; 
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
     color: #B6B5B2; 
     line-height: 1.5; 
+    font-size: 130%;
 }
