--- a/css/contacts.css
+++ b/css/contacts.css
@@ -5,16 +5,8 @@
 h1{
     color: #6a0f1a;
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
 }
-
-
-
-
-
-
-
-
-
 
 main {
     min-height: 100vh;          
