--- a/css/footer.css
+++ b/css/footer.css
@@ -12,7 +12,8 @@ body {
     width:100%;
     height: auto;
     margin: 0 auto;
-    background-color: #6A0F1A;
+    background-image:url(../images/fotofooter.png);
+    background-size: cover;
     padding: 1rem;
     color: #F5EFE5;
     font-family: lato, sans-serif;
@@ -20,7 +21,18 @@ body {
     align-items: center;
     justify-content: center;
     box-sizing: border-box;
+    position: relative;
 }
+.footer::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.5;
+    z-index: 1;
+}
+
 .footer .container {
     display: flex;
     flex-direction: row;
@@ -28,6 +40,7 @@ body {
     justify-content: space-around;
     align-items: center;
     height: 100%;
+    z-index: 2;
 }
 .footer .col {
     display: flex;
