--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,5 +1,6 @@
 *{  margin: 0%;
     padding: 0%;
+    box-sizing: border-box;
 }
 
 h1{
@@ -12,19 +13,21 @@ main {
     min-height: 100vh;          
     display: flex;
     justify-content: center;   
-    align-items: center;       
-    background-image:url(../image/logoAgency.png) ;
+    align-items: center;        ;
     background-color: #F5EFE5;
 }
 
-.formulary {
-    background-color: white;
+
+    .formulary {
+    background-color: #3F4826;
     padding: 30px 40px;
     border-radius: 12px;
-    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border: solid 3px #6a0f1a;
+    box-shadow: 0 0 80px #d4a762 ;
     width: 100%;
     max-width: 400px;  
-    font-family: Arial, Helvetica, sans-serif;        /* Tamaño máximo del formulario */
+    font-family: Arial, Helvetica, sans-serif; 
+           /* Tamaño máximo del formulario */
 }
 
 .formulary h1 {
@@ -43,11 +46,14 @@ main {
     padding: 8px;
     margin-top: 5px;
     border-radius: 6px;
-    border: 1px solid #ccc;
+    border: 3px solid #6a0f1a;
+    background-color: #F5EFE5;
 }
 
 .formulary input[type="submit"] {
     margin-top: 15px;
     width: 100%;
     cursor: pointer;
+    color: #050505;
+    background-color: #d4a762;
 }
