--- a/css/footer.css
+++ b/css/footer.css
@@ -8,7 +8,7 @@ body {
     flex-direction: column;
     justify-content: flex-end; 
 }
-.footer{
+footer{
     width:100%;
     height: auto;
     margin: 0 auto;
@@ -23,7 +23,7 @@ body {
     box-sizing: border-box;
     position: relative;
 }
-.footer::after{
+footer::after{
     content: "";
     position: absolute;
     width: 100%;
@@ -33,7 +33,7 @@ body {
     z-index: 1;
 }
 
-.footer .container {
+footer .container {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -42,7 +42,7 @@ body {
     height: 100%;
     z-index: 2;
 }
-.footer .col {
+footer .col {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -52,7 +52,7 @@ body {
     max-width: 100%;
     overflow: hidden;
 }
-.footer .col p{
+footer .col p{
     margin: 0.2rem;
     line-height: 1.2;
 }
@@ -62,7 +62,7 @@ body {
     background-color: #F5EFE5;
     border-radius: 50%;
 }
-.footer .icons img{
+footer .icons img{
     max-width: 75%;
     width: auto;
     height: auto;
@@ -71,37 +71,37 @@ body {
     align-items:end;
 }
 @media (max-width: 480px) {
-    .footer .container {
+    footer .container {
         flex-direction: column;
         gap: 1.2rem;
     }
     .logofooter {
         max-width: 60%;
     }
-    .footer {
+    footer {
         padding: 2rem 1rem;
         height: auto;
     }
-    .footer .icons img {
+    footer .icons img {
         max-width: 28px;
     }
 }
 @media (max-width: 768px) {
-    .footer .container {
+    footer .container {
         flex-direction: column;
         gap: 1.5rem;
     }
-    .footer .col {
+    footer .col {
         width: 100%;
     }
     .logofooter {
         max-width: 50%;
     }
-    .footer {
+    footer {
         padding: 2rem 1rem;
         height: auto;
     }
-    .footer .icons img {
+    footer .icons img {
         max-width: 32px;
     }
 }
@@ -109,7 +109,7 @@ body {
     .logofooter {
         max-width: 45%;
     }
-    .footer .container {
+    footer .container {
         gap: 1rem;
     }
 }
@@ -122,23 +122,23 @@ body {
     .logofooter {
         max-width: 35%;
     }
-    .footer .col {
+    footer .col {
         max-width: 450px;
     }
 }
-.footer a{
+footer a{
     color: #F5EFE5;
     text-decoration: none;
 }
-.footer a:hover {
+footer a:hover {
     text-decoration: underline;
     color: #C5A467;
 }
-.footer .icons a img {
+footer .icons a img {
     filter: brightness(100%);
     transition: filter 0.3s;
 }
-.footer .icons a:hover img{
+footer .icons a:hover img{
     filter: invert(75%) sepia(25%) saturate(5000%) hue-rotate(30deg) brightness(95%);
 }
 .Copyright{
