--- a/css/contacts.css
+++ b/css/contacts.css
@@ -4,13 +4,21 @@
     
 }
 
+
+
+
 h1{
-    color: #6a0f1a;
+    color: #070707;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    border: #6a0f1a 3px solid;
+    border-radius: 10px;
+    background-color: #d4a762;
+
 }
 
-main {
+main {background-image: url(/image/logoAgency.png);
+    background-size: contain;
     min-height: 100vh;          
     display: flex;
     justify-content: center;   
