--- a/css/index.css
+++ b/css/index.css
@@ -19,7 +19,7 @@ h3 {
 }
 h1 {
   color: #e4384c;
-  font-size: 2.5rem;
+  font-size: 4rem;
 }
 h2,
 h3 {
@@ -27,4 +27,73 @@ h3 {
 }
 section {
   margin-top: 30px;
+}
+.wraperHeaderBanner {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+.wrapperPage {
+  width: 85%;
+  margin: 0 auto;
+}
+header {
+  height: 50px;
+  flex-shrink: 0;
+}
+.banner {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.bannerContent {
+  width: 100%;
+  height: 100%;
+  background-image: url("../images/heroBanner.jpg");
+  background-size: cover;
+  background-position: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  color: white;
+  line-height: 1.2;
+  position: relative;
+  padding: 30px;
+  border-radius: 15px;
+}
+.bannerContent:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: 0.5;
+  border-radius: 15px;
+}
+.bannerContent > * {
+  z-index: 3;
+  margin: 10px auto;
+  text-align: center;
+}
+.bannerContent > h1,
+.bannerContent p {
+  width: 80%;
+}
+.bannerContent h1 {
+  background-color: rgba(255, 255, 255, 0);
+}
+.bannerContent p {
+  font-size: 1.5rem;
+}
+.bannerContent a {
+  color: var(--backgroundPrimary);
+  background-color: #a73341;
+  padding: 15px 30px;
+  border-radius: 15px;
+}
+.bannerContent a:hover{
+    background-color: #e4384c;
 }
