--- a/css/index.css
+++ b/css/index.css
@@ -112,6 +112,10 @@ header {
   border-radius: 20px;
   overflow: hidden;
   text-align: center;
+display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
 }
 .scaleProduct {
   overflow: hidden;
@@ -128,6 +132,7 @@ header {
 .productInfo {
   background-color: wheat;
   padding: 10px;
+  flex: 1;
 }
 .productInfo > * {
   margin: 8px 0;
