--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -12,11 +12,7 @@ body {
     background-position: center;
     margin: 0%;
     padding: 0%;
-    overflow: hidden;
-    overflow-x: hidden;
-    /* solo oculta desbordes horizontales */
-    overflow-y: auto;
-    /* permite scroll vertical */
+    
 
 }
 
@@ -71,9 +67,33 @@ body {
     width: 300px;
     border-radius: 15px;
     overflow: hidden;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
     background-color: #6A0F1A;
-    position: relative;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    display: flex;
+    flex-direction: column;
+}
+
+.card img {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+}
+
+.cardContent {
+    background: #3F4826;
+    color: #F5EFE5;
+    text-align: center;
+}
+
+
+
+.cardContent h3 {
+    margin-bottom: 10px;
+}
+
+.cardContent p {
+    font-size: 14px;
+    color: #B6B5B2;
 }
 
 
@@ -89,37 +109,6 @@ body {
     text-align: center;
     padding: 10px;
     font-size: 1.1rem;
-}
-
-.card img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    position: relative;
-}
-
-.cardContent {
-    position: absolute;
-    bottom: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    height: 110px;
-    color: #B6B5B2;
-    padding: 15px;
-    text-align: center;
-    background: #3F4826;
-    overflow: hidden;
-}
-
-
-.cardContent h3 {
-    margin-bottom: 10px;
-}
-
-.cardContent p {
-    font-size: 14px;
-    color: #B6B5B2;
 }
 
 .textHistory {
@@ -159,21 +148,6 @@ body {
     overflow-y: auto !important;
 }
 
-/* evita que pseudo-elementos bloqueen la vista */
-html::before,
-html::after,
-body::before,
-body::after {
-    display: none !important;
-}
 
-/* en caso de custom element que haga de overlay */
-footer-los-tres-fogones-selectos,
-.some-overlay,
-.modal,
-.fullscreen-overlay {
-    position: static !important;
-    pointer-events: auto !important;
-    visibility: visible !important;
-    z-index: 1 !important;
-}
+
+
