--- a/css/footer.css
+++ b/css/footer.css
@@ -59,7 +59,7 @@ footer .col p{
 .logofooter{
     max-width: 60%;
     align-items: center;
-    background-color: #F5EFE5;
+    background-color: #f5f5f5;
     border-radius: 50%;
 }
 footer .icons img{
@@ -127,7 +127,7 @@ footer .icons img{
     }
 }
 footer a{
-    color: #F5EFE5;
+    color: #f5f5f5;
     text-decoration: none;
 }
 footer a:hover {
