--- a/css/contacts.css
+++ b/css/contacts.css
@@ -8,7 +8,7 @@
 
 
 h1{
-    color: #070707;
+    color: #F5EFE5;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     border: #6a0f1a 3px solid;
@@ -19,8 +19,10 @@ h1{
 
 main {
     
-    background-image: url(/image/logoAgency.png);
+    background-image: url(/images/fondoNavidadFormulary.jpg);
+    background-repeat: no-repeat;
     background-size: contain;
+    background-size: cover;
     height: 100vh;          
     display: flex;
     justify-content: center;   
@@ -49,6 +51,7 @@ main {
 .formulary label {
     display: block;
     margin-top: 10px;
+    color: #B6B5B2;
 }
 
 .formulary input,
@@ -58,7 +61,7 @@ main {
     margin-top: 5px;
     border-radius: 6px;
     border: 3px solid #6a0f1a;
-    background-color: #F5EFE5;
+    background-color: #d4a762;
 }
 
 .formulary input[type="submit"] {
