--- a/css/winePage.css
+++ b/css/winePage.css
@@ -1,21 +1,28 @@
 body {
     margin: 0;
     padding: 0;
-    position: relative;
-    min-height:auto;
 }
-main,.fondo {
-    position:fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url("../images/bodegaNavidad.png");      
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-    opacity: 0.8;
-    z-index: -1;
+.pageContent {
+    position: relative;
+    min-height: 100%;
+}
+.fondo {
+position:absolute; 
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+background-image: url("../images/bodegaNavidad.png");
+background-size:contain;
+background-position: center;
+opacity: 0.8;
+z-index: -1;
+}
+
+main {
+position: relative; 
+z-index: 1;
+padding: 40px 20px;
 }
 
 .cardsWine {
