--- a/css/index.css
+++ b/css/index.css
@@ -117,6 +117,21 @@ header {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
+}
+.discount{
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top:5%;
+  left:5%;
+  background-color: red;
+  padding: 15px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 90;
 }
 .scaleProduct {
   overflow: hidden;
