--- a/css/cannedFood.css
+++ b/css/cannedFood.css
@@ -12,7 +12,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-background-image: url(../images/IMG_6257.JPG);
+background-image: url("");
 background-size:contain;
 background-position: center;
 opacity: 0.8;
@@ -85,3 +85,4 @@ padding: 40px 20px;
         width: 45%;
     }
 }
+
