--- a/css/cannedFood.css
+++ b/css/cannedFood.css
@@ -12,7 +12,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
-background-image: url("");
+background-image: url(../images/Conservas/fondo1.jpeg);
 background-size:contain;
 background-position: center;
 opacity: 0.8;
@@ -37,9 +37,15 @@ padding: 40px 20px;
     margin-top: 40px;
     margin-bottom: 20px;
     font-size: 2rem;
-    color:#F5EFE5 ;
+    color:#6A0F1A ;
     z-index: 10;
+    display: inline-block;
+    background:rgba(231, 222, 215, 0.7);
+    border-radius: 12px;
+    padding: 10px 25px;
+    backdrop-filter: blur(3px);
 }
+
 .cards-row {
     display: flex;
     gap: 1cm;
