--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@ header {
     font-family: 'Lato', sans-serif;
     width: 100%;
     background-color: #f1f1f1;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
+    box-shadow: 0 2px 10px rgba(219, 120, 120, 0.08);
     position: sticky;
     top: 0;
     z-index: 999;
@@ -16,8 +16,11 @@ header {
 ---------------------------------------------------- */
 .navbar {
     padding: 15px 20px;
-    background: #c23f3f !important;
-    border-bottom: 10px solid #214e1b;
+    background-image:url(/images/fondoVerde2.avif);
+background-size: cover;      /* La imagen cubre toda la navbar */
+    background-repeat: no-repeat; /* No se repite */
+    background-position: center; 
+    border-bottom: 2px solid ;
 }
 
 .navbar-brand {
@@ -25,7 +28,7 @@ header {
     font-size: 1.6rem;
     font-weight: 600;
     letter-spacing: 1px;
-    color: #cad350 !important;
+    color: #6A0F1A!important;
     /* Rojo vino elegante */
 }
 
@@ -33,6 +36,7 @@ header {
     margin-left: auto;
     display: flex;
     gap: 12px;
+    color: #B6B5B2;
 }
 
 /* ----------------------------------------------------
@@ -41,19 +45,18 @@ header {
 .nav-link {
     font-size: 1rem;
     font-weight: 400;
-    color: #333 !important;
+    color: #B6B5B2 !important;  /* color uniforme */
     transition: 0.3s ease;
     padding: 8px 12px !important;
     border-radius: 5px;
 }
 
 .nav-link:hover {
-    color: #8B0000 !important;
-    background: rgba(139, 0, 0, 0.08);
+    color: #D4AF37 !important; /* dorado en hover */
 }
 
 .nav-link.active {
-    color: #8B0000 !important;
+    color: #B6B5B2!important; /* activo también dorado */
     font-weight: 700;
 }
 
