--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,3 @@
-/* ----------------------------------------------------
-   ESTILOS GENERALES DEL HEADER
----------------------------------------------------- */
 header {
     font-family: 'Lato', sans-serif;
     width: 100%;
@@ -11,16 +8,16 @@ header {
     z-index: 999;
 }
 
-/* ----------------------------------------------------
-   NAVBAR GENERAL (Bootstrap + personalización)
----------------------------------------------------- */
+
 .navbar {
     padding: 15px 20px;
-    background-image:url(/images/fondoVerde2.avif);
-background-size: cover;      /* La imagen cubre toda la navbar */
-    background-repeat: no-repeat; /* No se repite */
-    background-position: center; 
-    border-bottom: 2px solid ;
+    background-image: url(/images/fondoVerde2.avif);
+    background-size: cover;
+    /* La imagen cubre toda la navbar */
+    background-repeat: no-repeat;
+    /* No se repite */
+    background-position: center;
+    border-bottom: 2px solid;
 }
 
 .navbar-brand {
@@ -28,7 +25,7 @@ background-size: cover;      /* La imagen cubre toda la navbar */
     font-size: 1.6rem;
     font-weight: 600;
     letter-spacing: 1px;
-    color: #6A0F1A!important;
+    color: #6A0F1A !important;
     /* Rojo vino elegante */
 }
 
@@ -39,24 +36,25 @@ background-size: cover;      /* La imagen cubre toda la navbar */
     color: #B6B5B2;
 }
 
-/* ----------------------------------------------------
-   LINKS
----------------------------------------------------- */
+
 .nav-link {
     font-size: 1rem;
     font-weight: 400;
-    color: #B6B5B2 !important;  /* color uniforme */
+    color: #B6B5B2 !important;
+    /* color uniforme */
     transition: 0.3s ease;
     padding: 8px 12px !important;
     border-radius: 5px;
 }
 
 .nav-link:hover {
-    color: #D4AF37 !important; /* dorado en hover */
+    color: #D4AF37 !important;
+    /* dorado en hover */
 }
 
 .nav-link.active {
-    color: #B6B5B2!important; /* activo también dorado */
+    color: #B6B5B2 !important;
+    /* activo también dorado */
     font-weight: 700;
 }
 
@@ -66,9 +64,7 @@ background-size: cover;      /* La imagen cubre toda la navbar */
     cursor: not-allowed;
 }
 
-/* ----------------------------------------------------
-   BURGER MENU (Responsive)
----------------------------------------------------- */
+
 .navbar-toggler {
     border-color: #8B0000 !important;
 }
@@ -77,9 +73,7 @@ background-size: cover;      /* La imagen cubre toda la navbar */
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28139,0,0,1%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
 
-/* ----------------------------------------------------
-   RESPONSIVE
----------------------------------------------------- */
+
 @media (max-width: 768px) {
 
     .navbar-nav {
