--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -25,8 +25,6 @@ body {
     width: 100%;
     padding: 20px;
     background-color: #3F4826;
-    display: inline-block;
-
 }
 
 .listWorks {
@@ -54,6 +52,8 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
+
+
 }
 
 .cardPhotos {
@@ -61,6 +61,7 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 20px;
     padding: 20px;
+
 }
 
 .card {
@@ -68,7 +69,7 @@ body {
     border-radius: 15px;
     overflow: hidden;
     background-color: #6A0F1A;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 8px 20px rgba(230, 218, 218, 0.15);
     display: flex;
     flex-direction: column;
 }
@@ -77,11 +78,12 @@ body {
     width: 100%;
     height: 300px;
     object-fit: cover;
+    background-color: #6A0F1A;
 }
 
 .cardContent {
     background: #3F4826;
-    color: #F5EFE5;
+    color: #B6B5B2;
     text-align: center;
 }
 
@@ -123,6 +125,7 @@ body {
     color: #B6B5B2;
     line-height: 1.5;
     font-size: 130%;
+    
 }
 
 .textT {
@@ -133,14 +136,13 @@ body {
     width: 60%;
     max-width: 1000px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px #B6B5B2;
     color: #B6B5B2;
     line-height: 1.5;
     font-size: 130%;
 }
 
 
-/* fuerza que html/body permitan scroll */
 html,
 body {
     height: auto !important;
