--- a/css/header.css
+++ b/css/header.css
@@ -4,7 +4,7 @@
 
 body {
     font-family: 'Lato', sans-serif;
-    
+    background-color: #6A0F1A;
 }
 
 /* ------------------------------
@@ -12,18 +12,19 @@ body {
 ------------------------------ */
 .navbar {
     padding: 0.8rem 1rem;
+    background-color: red !important
     
 }
-
+nav{
+    background-color: red !important;
+}
 .navbar-brand {
     display: flex;
     align-items: center;
     gap: 10px;
     font-family: 'Cinzel', serif;
     font-size: 1.3rem;
-    font-weight: 600;
-        background-color: #6A0F1A;
-}
+    font-weight: 600;}
 
 .classlogo {
     height: 50px;
