--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -7,13 +7,11 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
     background-image:url(/images/bodega.jpg);
-    background-size: 120%;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     margin: 0%;
     padding: 0%;
-    
-
 }
 
 
@@ -146,7 +144,7 @@ body {
 html,
 body {
     height: auto !important;
-    min-height: 0 !important;
+    min-height: 100% !important;
     overflow-y: auto !important;
 }
 
