--- a/css/cannedFood.css
+++ b/css/cannedFood.css
@@ -13,7 +13,7 @@ left: 0;
 width: 100%;
 height: 100%;
 background-image: url(../images/Conservas/fondo1.jpeg);
-background-size:contain;
+background-size:cover;
 background-position: center;
 opacity: 0.8;
 z-index: -1;
