--- a/css/footer.css
+++ b/css/footer.css
@@ -3,17 +3,14 @@ html,body{
     margin: 0;
     padding: 0;
 }
-body {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end; 
-}
+
 footer{
     width:100%;
     height: auto;
     margin: 0 auto;
-    background-image:url(../images/fotofooter.png);
+    background-image:url(/images/fotofooter.png);
     background-size: cover;
+    background-position: center;
     padding: 1rem;
     color: #F5EFE5;
     font-family: lato, sans-serif;
