--- a/css/header.css
+++ b/css/header.css
@@ -1,21 +1,14 @@
-/* ------------------------------
-   Fuente general
------------------------------- */
 
 body {
   font-family: "Lato", sans-serif;
 }
 
-/* ------------------------------
-   Header y navbar
------------------------------- */
 .navbar {
   padding: 0.8rem 1rem;
-   background-color:  #6a0f1a !important;
+  background-color:  #6a0f1a !important;
 }
-
 .navbar-brand {
-    color: white;
+  color:  #B6B5B2;
   display: flex;
   align-items: center;
   gap: 10px;
@@ -27,30 +20,24 @@ body {
 .classlogo {
   height: 100px;
   width: auto;
-  background-color: white;
+  background-color:  #B6B5B2;
   border-radius: 50%;
 }
 
-/* ------------------------------
-   Nav items
------------------------------- */
 .navbar-nav .nav-link {
   font-size: 1rem;
   padding: 8px 12px;
   transition: 0.3s;
-  color: white;
+  color:  #B6B5B2;
 }
 
 .navbar-nav .nav-link:hover {
-  color: #b8860b; /* dorado sutil */
+  color: #b8860b; 
 }
 .navbar-nav{
-   width: 100%;
+  width: 100%;
 }
 
-/* ------------------------------
-   Carrito
------------------------------- */
 .cart-link {
   position: relative;
   font-size: 1.3rem;
@@ -58,22 +45,9 @@ body {
   color: white;
 }
 
-.cart-count {
-  background: #b8860b;
-  color: #fff;
-  border-radius: 50%;
-  padding: 1px 6px;
-  font-size: 0.75rem;
-  position: absolute;
-  top: -6px;
-  right: -10px;
-}
 
-/* ------------------------------
-   RESPONSIVE
------------------------------- */
 
-/* Tablets */
+
 @media (max-width: 992px) {
   .navbar-brand {
     font-size: 1.2rem;
@@ -92,7 +66,6 @@ body {
   }
 }
 
-/* Móviles */
 @media (max-width: 576px) {
   .navbar {
     padding: 0.6rem 1rem;
@@ -122,7 +95,6 @@ body {
   }
 }
 
-/* Móviles muy pequeños (tipo iPhone SE) */
 @media (max-width: 360px) {
   .navbar-brand {
     font-size: 0.9rem;
