feat: I link every page of web page

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -19,7 +19,7 @@ h1{
 
 main {
     
-    background-image: url(/images/fondoNavidadFormulary.jpg);
+    background-image: url(../images/fondoNavidadFormulary.jpg);
     background-repeat: no-repeat;
     background-size: cover;         
     display: flex;
