--- a/css/aboutUs.css
+++ b/css/aboutUs.css
@@ -8,7 +8,7 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image:url(/images/bodega.jpg);
+    background-image:url(../images/bodega.jpg);
     background-size: cover;
     background-repeat: no-repeat;
 
