--- a/css/footer.css
+++ b/css/footer.css
@@ -8,7 +8,7 @@ footer{
     width:100%;
     height: auto;
     margin: 0 auto;
-    background-image:url(/images/fotofooter.png);
+    background-image:url(../images/fotofooter.png);
     background-size: cover;
     background-position: center;
     padding: 1rem;
